--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@soluzioni-futura/eslint-config-soluzioni-futura": "^1.1.0",
     "express": "^4.17.1",
     "mdbootstrap": "^4.19.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "serve": "^12.0.0"
   }
 }
