--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@soluzioni-futura/eslint-config-soluzioni-futura": "^1.1.0",
     "express": "^4.17.1",
     "mdbootstrap": "^4.19.1",
     "path": "^0.12.7",
     "serve": "^12.0.0"
+  },
+  "devDependencies": {
+    "@soluzioni-futura/eslint-config-soluzioni-futura": "^1.4.0",
+    "eslint": "^7.32.0"
   }
 }
